# otus-cpp-basic-hw05

./: CMakeLists.txt  README.md  main.cpp
src/: max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  percentile.cpp  percentile.h  statistic.h  std.cpp  std.h
